--- a/editcust.html
+++ b/editcust.html
@@ -209,7 +209,7 @@
 
             </div>
             <div class="col-md-6">
-
+<form action="cusdetail.html" >
               <div class="card border-left-primary shadow h-100 py-2">
 
                 <div class="card-body">
@@ -290,7 +290,7 @@
                   </center>
                 </div>
               </div>
-
+            </form>
             </div>
 
           </div>
