--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@ img {
           <div id="collapseSignout" class="collapse" aria-labelledby="headingSignout" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
        
-              <a class="collapse-item" href="login/index.html">Sing out</a>
+              <a class="collapse-item" href="index.html">Sing out</a>
             </div>
           </div>
         </li>
@@ -258,7 +258,7 @@ img {
         <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
         <div class="modal-footer">
           <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="login/index.html">Logout</a>
+          <a class="btn btn-primary" href="index.html">Logout</a>
         </div>
       </div>
     </div>
