--- a/cusdetail.html
+++ b/cusdetail.html
@@ -216,7 +216,7 @@
                 
                 <div class="card-body">
                   <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                    <h6 class="m-0 font-weight-bold text-primary">Customer Detail</h6>
+                    <h6 class="m-0 font-weight-bold text-primary">Detail</h6>
                     <div class="dropdown no-arrow">
                       <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
@@ -256,7 +256,11 @@
                     </thead>
 
                   </table>
+                  <center>
+<form action="Customer.html">
+ <input type="submit"class="btn btn-primary" value="Back">
 
+</form></center>
                 </div>
               </div>
             </div>
